--- a/views/message/newMessage.ejs
+++ b/views/message/newMessage.ejs
@@ -13,7 +13,7 @@
     <div>
         
         <label for="msg">Message: </label>
-        <input type="text" name="msg" id="msg" value="<%= data['msg'] %>" required>
+        <textarea name="msg" id="msg" required><%= data ['msg'] %></textarea>
         <% if (errors && errors['msg']) { %>
             <span class="label-error">Le message est requis !</span>
         <% } %>
