--- a/views/message/detail.ejs
+++ b/views/message/detail.ejs
@@ -1,6 +1,9 @@
 <%- include('../partials/_header.ejs') %>
 
-<h1>Detail d'un message</h1>
+<h1>Detail d'un message <%= message.id %> </h1>
+<p>Pseudo : <%= message.pseudo %> </p>
+<p>Contenu : <%= message.content %> </p>
+<p>Date de création : <%= message.content %> </p>
 TODO : Récuperer les données !!!
 
 <%- include('../partials/_footer.ejs') %>
