--- a/views/message/index.ejs
+++ b/views/message/index.ejs
@@ -4,7 +4,7 @@
 <dl>
     <% for (const message of messages) { %>
     <dt> <%= message.pseudo %> </dt>
-    <dd><%= message.Content %> </dd>
+    <dd><%= message.content %> </dd>
     <% } %>
     }
 
